--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Pull in JavaScript -->
     <script src="https://code.jquery.com/jquery.js"></script>
-    <title>Cliff and Kane</title>
+    <title>Cliff and Kane Racquetball</title>
 </head>
 <body>
     <!-- Top Navbar & Hero -->
@@ -20,13 +20,11 @@
                 <li><a href="#">Lessons</a></li>
                 <li><a href="#">About</a></li>
               </ul>
-              <div class="irtLogo">
-                  <img src="images/logo-homepage-300x236.png" width="150px" height="118px">
-              </div>
+              <img src="images/logo-homepage-300x236.png" width="150px" height="118px">
             </div>
-          </div>
+        </div>
           <h1>Cliff and Kane</h1>
-                    <p>Racquetball Training and Gear</p>
+            <h2>Racquetball Training and Gear</h2>
           <div class="hero-unit">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -34,7 +32,7 @@
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
-                <div class="carousel-inner">
+                <div class="carousel-inner container-fluid">
                   <div class="carousel-item carousel-item-primary active">
                     <p>
                     <a class="btn btn-primary btn-large">
@@ -61,7 +59,18 @@
                   <span class="sr-only">Next</span>
                 </a>
               </div>
-            
+          </div>
+    </section>
+    <section class="homepageContent">
+        <div class="card">
+            <div class="card-header">
+              Featured
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Learn about our services</h5>
+              <p class="card-text">Equipment and coaching to take you from novice to pro</p>
+              <a href="#" class="btn btn-primary">Start Training</a>
+            </div>
           </div>
     </section>
 
