--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     <section class="homepageContent">
         <div class="card">
             <div class="card-header">
-              Featured
+              Spring Special
             </div>
             <div class="card-body">
               <h5 class="card-title">Learn about our services</h5>
-              <p class="card-text">Equipment and coaching to take you from novice to pro</p>
+              <p class="card-text">Equipment and coaching to take you from novice to pro. 25% off when you sign up before February 28!</p>
               <a href="#" class="btn btn-primary">Start Training</a>
             </div>
           </div>
