--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Learn about our services</h5>
-              <p class="card-text">Equipment and coaching to take you from novice to pro. 25% off when you sign up before February 28!</p>
+              <p class="card-text">Equipment and coaching from Aces to Z-Serves. 25% off when you sign up before February 28!</p>
               <a href="#" class="btn btn-primary">Start Training</a>
             </div>
           </div>
