--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <!-- Pull in JavaScript -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <title>Cliff and Kane Racquetball</title>
+    <!-- Hotjar Tracking Code for https://bdharris712.github.io/RacquetballShop/ -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2220693,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K62MNTQRMQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K62MNTQRMQ');
+</script>
 </head>
 <body>
     <!-- Top Navbar & Hero -->
