moving some bogus content
Lower on the page.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   gtag('config', 'G-K62MNTQRMQ');
 </script>
 </head>
+
 <body>
+  
     <!-- Top Navbar & Hero -->
     <section class="heroNav">
         <div class="navbar navbar-fixed-top">
@@ -81,6 +83,17 @@
               </div>
           </div>
     </section>
+    <h1>Testing... 1 2 3 ...</h1>
+  <p>
+    I'm just adding a bunch of text<br>
+    because I want some changes<br>
+    to appear<br>
+    on my GitHub page.<br><br></p>
+    <h2>Haiku</h2>
+    <p>Nothing seems to work.<br>
+    I am writing a haiku<br>
+    to show my failed code.<br>
+  </p>
     <section class="homepageContent">
         <div class="card">
             <div class="card-header">
